google_cloud_production/6-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: django
  name: django
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        io.kompose.network/nginx-network: "true"
        io.kompose.network/postgres-network: "true"
        io.kompose.service: django
    spec:
      containers:
      - name: django-geneesplaats-nl
        image: 'spikkie/django_geneesplaats_nl'
        #livenessProbe:
        #  httpGet:
        #    path: /healthz
        #    port: 80
        #readinessProbe:
          # an http probe
          #httpGet:
          #  path: /readiness
         #  port: 80
            #initialDelaySeconds: 10
            #timeoutSeconds: 5
        ports:
          - name: http
            containerPort: 8001
        volumeMounts:
        - mountPath: /app/static_cdn/static_root/
          name: static-volume
        - mountPath: /app/static_cdn/media_root/
          name: media-volume
        - mountPath: /app/static_my_proj/
          name: static-my-proj-volume

      restartPolicy: Always
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume-claim
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume-claim
      - name: static-my-proj-volume
        persistentVolumeClaim:
          claimName: static-my-proj-volume-claim

      imagePullSecrets:
        - name: regcred-nginx-ingress
