google_cloud_production/7-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nginx-ingress
  name: nginx-ingress
  namespace: nginx-ingress  
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: django
  ports:
  - port: 80
    targetPort: 8001
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  type: LoadBalancer
