google_cloud_production/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: nginx-ingress
spec:
  selector:
    app: django
  ports:
  - protocol: "TCP"
    port: 8001
    targetPort: 8001
