google_cloud_production/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres 
  namespace: nginx-ingress
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
