google_cloud_production/8-django-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: django-ingress
  namespace: nginx-ingress
spec:
  tls:
  - hosts:
    - www.geneesplaats.nl
    secretName: default-server-secret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: django
          servicePort: 8001
